[gd_scene load_steps=11 format=2]

[ext_resource path="res://pause_menu/b1.r.png" type="Texture" id=1]
[ext_resource path="res://pause_menu/pause_back.png" type="Texture" id=2]
[ext_resource path="res://pause_menu/b2.s.png" type="Texture" id=3]
[ext_resource path="res://pause_menu/som_pause.mp3" type="AudioStream" id=4]
[ext_resource path="res://pause_menu/p.png" type="Texture" id=5]
[ext_resource path="res://pause_menu/PauseMenu.gd" type="Script" id=6]
[ext_resource path="res://pause_menu/b2.r.png" type="Texture" id=7]
[ext_resource path="res://pause_menu/b3.r.png" type="Texture" id=8]
[ext_resource path="res://pause_menu/b3.s.png" type="Texture" id=9]
[ext_resource path="res://pause_menu/b1.s.png" type="Texture" id=10]

[node name="PauseMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 6 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="RetornarBtn" type="TextureButton" parent="."]
anchor_left = 0.238
anchor_top = 0.462
anchor_right = 0.505
anchor_bottom = 0.582
margin_left = 0.287994
margin_top = -0.200012
margin_right = -0.119995
margin_bottom = -0.200012
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="SairBtn" type="TextureButton" parent="."]
anchor_left = 0.235352
anchor_top = 0.648333
anchor_right = 0.511719
anchor_bottom = 0.82
margin_left = 0.999557
margin_top = 0.000183105
margin_right = 0.999756
margin_bottom = -29.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="."]
anchor_left = 0.269
anchor_top = 0.2
anchor_right = 0.486
anchor_bottom = 0.408333
margin_left = -0.456024
margin_right = 0.335968
margin_bottom = -4.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": true
}

[node name="musica_pause" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -25.0

[connection signal="pressed" from="RetornarBtn" to="." method="_on_RetornarBtn_pressed"]
[connection signal="pressed" from="SairBtn" to="." method="_on_SairBtn_pressed"]
